--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 			<div class="v">
 				<div class="para2">From time tracking and resource planning to roadmapping to project and program management, get the data you need to optimize how your team works.</div>
 			</div>
-			<div class="parabtn">
+			<button class="parabtn">
 				Book a demo
-			</div>
+			</button>
 		</div>
 		<img class="bodimg" id="bodimgg" src="images/ttio.svg">
 
@@ -89,7 +89,7 @@
 				<div class="para5">Read the full story</div>
 				<div class="gts">></div>
 				</div>
-				<div class="btn2">More success stories</div>
+				<button class="btn2">More success stories</button>
 			</div>
 		</div>
 	</div>
@@ -304,9 +304,9 @@
 				<div class="v" id="v7"> 
 					<div class="para77" id="para7-1">Tempo creates easy-to-use applications so customers can track and understand time, their most constrained resource. We include a growing team of over 100 employees in offices in Boston, Montreal and Reykjavík and have built a network of more than 20,000 customers, both large and small, across a range of industries.</div>
 				</div>
-				<div class="parabtn" id="para7btn">
+				<button class="parabtn" id="para7btn">
 					Learn more about Tempo
-				</div>
+				</button>
 			</div>
 	
 		</div>
@@ -318,9 +318,9 @@
 			<div class="v" id="v8"> 
 				<div class="para2" id="para8-1">Learn everything you want to know about Tempo software with a free demo. We'll show you how our platform allows you to optimize your work with better time tracking, resource planning, and financial management.</div>
 			</div>
-			<div class="parabtn" id="parabtn8">
+			<button class="parabtn" id="parabtn8">
 				Book a demo
-			</div>
+			</button>
 		</div>
 		<img class="bodimg"  id="bod8img" src="images/bdemo.svg">
 
@@ -331,7 +331,7 @@
 			<div class="para9-1" id="x9">
 				<img class="bod9img" src="images/tempo tick.svg">
 				<div class="gvtxt">Gain visibility into time and its true value</div>
-				<div class="parabtn" id="para9btn">Get started</div>
+				<button class="parabtn" id="para9btn">Get started</button>
 			</div>
 
 			<div class="para9-1" id="k9">
