--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" type="jpg" href="images/tempo tick.svg">
-	<title>tempo</title>
+	<title>Tempo Time Tracking For Jira | Tempo</title>
 </head>
 
 <body>
